plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.0'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.billybang'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudVersion', "2023.0.2")
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator' // actuator
    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client' // eureka client
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign' // feign client
    implementation 'org.springframework.cloud:spring-cloud-starter-config' // config client
    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp' // bus amqp

    implementation 'org.mariadb.jdbc:mariadb-java-client'
    implementation 'jakarta.validation:jakarta.validation-api'
    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4' // swagger

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation 'org.mapstruct:mapstruct:1.5.5.Final' // mapstruct
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    implementation 'org.jsoup:jsoup:1.14.3' // jsoup
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

jar {
    enabled = false;
}
